# PatternRecognition

./: .gitignore  LICENSE  README.md  dataVisualization_1.py  dataVisualization_2.py  data_regression_1.py  housingtest.csv  log.txt  loss_calc.txt  pain.csv  preprocessing_1.py  preprocessing_2.py  preprocessing_3.py  preprocessing_4.py  pyproject.toml  requirements.txt
data/: MinMaxScaler_scaled.csv  StandardScaler_scaled.csv  housing_filled.csv  housing_final.csv
src/: dataVisualization_1.py  dataVisualization_2.py  data_preprocessing_1.py  data_preprocessing_2.py  data_preprocessing_4.py  data_visualization_1.py  main.py  preprocessing_1.py  preprocessing_2.py  preprocessing_3.py  preprocessing_4.py  utils.py
src/csv_utils/: __init__.py  csv_utils.py
src/data/: RobustScaler_scaled.csv
src/preprocessing/: __init__.py  data_preprocessing_1.py  data_preprocessing_2.py  data_preprocessing_3.py  data_type_identifier.py  fill_data.py  numerical_scaling.py  one_hot_encode.py
src/regression/: __init__.py  data_regression_1.py  k_fold_CV.py  least_squares.py  loss_functions.py  multi_layer_perceptron.py  perceptron.py
src/utils/: __init__.py  utils.py
src/visualization/: __init__.py  data_visualization_2.py  plot_histograms.py  plot_pairs.py
