[build-system]
requires = ["setuptools>=64", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "PatternRecognition"
authors = [
    { name = "Eleni Katsimicha", email = "helenkatsimiha@gmail.com"}
]
description = "Pattern Recognition assignment"
classifiers = ["Programming Language :: Python :: 3.11.0"]
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "scikit-learn",
    "numpy",
    "matplotlib",
    "seaborn"
]
dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools_scm]

[project.urls]
Repository = "https://github.com/noudi03/PatternRecognition"